--- a/Gazel Traffic/Base.lproj/Main.storyboard
+++ b/Gazel Traffic/Base.lproj/Main.storyboard
@@ -30,34 +30,60 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yKf-Oe-Ah3">
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PZd-Et-O0b">
-                                        <color key="backgroundColor" red="1" green="0.78178656719999995" blue="0.39024076949999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="New Product-100" translatesAutoresizingMaskIntoConstraints="NO" id="AJ2-1a-qSE">
+                                                <frame key="frameInset" minX="157" minY="236" width="60" height="60"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Shipped-100" translatesAutoresizingMaskIntoConstraints="NO" id="CYa-yG-35B">
+                                                <frame key="frameInset" minX="157" minY="35" width="60" height="60"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Максимальный перевозимый вес - 1.5 тонны, позволяет осуществлять грузоперевозки в черте города." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h78-xW-bIf">
+                                                <frame key="frameInset" minX="68" minY="304" width="250" height="67"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Небольшая стоимость перевозки на газели позволяет выгодно организовать бизнес." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3sw-cS-cNf">
+                                                <frame key="frameInset" minX="68" minY="510" width="250" height="74"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.87490234374999998" green="0.51819995986051182" blue="0.0" alpha="0.18075953994832211" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="135" id="Gxj-SL-yDZ"/>
+                                            <constraint firstAttribute="height" constant="672" id="Ck9-jQ-6dS"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yEl-Dw-i1i">
-                                        <color key="backgroundColor" red="0.95294123890000004" green="0.0" blue="0.16078431900000001" alpha="1" colorSpace="deviceRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="r53-Uo-fhn"/>
-                                        </constraints>
-                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Размер кузова 4x1.9x1.5 идеально подходит для организации переездов, перевозки стройметериалов и прочих грузов." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaP-fO-tlO">
+                                        <rect key="frame" x="69" y="222" width="236" height="85"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ruble-100" translatesAutoresizingMaskIntoConstraints="NO" id="Dc6-0H-u60">
+                                        <rect key="frame" x="157" y="551" width="60" height="60"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="yEl-Dw-i1i" firstAttribute="leading" secondItem="yKf-Oe-Ah3" secondAttribute="leading" id="4Qi-3b-4lV"/>
                                     <constraint firstAttribute="trailing" secondItem="PZd-Et-O0b" secondAttribute="trailing" id="Z1d-tN-w3y"/>
                                     <constraint firstItem="PZd-Et-O0b" firstAttribute="leading" secondItem="yKf-Oe-Ah3" secondAttribute="leading" id="b0M-hQ-dX3"/>
-                                    <constraint firstItem="yEl-Dw-i1i" firstAttribute="top" secondItem="PZd-Et-O0b" secondAttribute="bottom" constant="163" id="h9C-zg-pdT"/>
                                     <constraint firstItem="PZd-Et-O0b" firstAttribute="centerX" secondItem="yKf-Oe-Ah3" secondAttribute="centerX" id="hHX-PT-sNz"/>
-                                    <constraint firstItem="PZd-Et-O0b" firstAttribute="top" secondItem="yKf-Oe-Ah3" secondAttribute="top" constant="119" id="lTV-bI-Nw4"/>
-                                    <constraint firstAttribute="bottom" secondItem="yEl-Dw-i1i" secondAttribute="bottom" constant="295" id="lkV-Zw-IMy"/>
-                                    <constraint firstAttribute="trailing" secondItem="yEl-Dw-i1i" secondAttribute="trailing" id="rfh-cO-ubv"/>
+                                    <constraint firstAttribute="bottom" secondItem="PZd-Et-O0b" secondAttribute="bottom" id="nMi-zZ-bLP"/>
+                                    <constraint firstItem="PZd-Et-O0b" firstAttribute="top" secondItem="yKf-Oe-Ah3" secondAttribute="top" constant="119" id="x0D-ab-NAa"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
                             <constraint firstItem="yKf-Oe-Ah3" firstAttribute="leading" secondItem="29Y-li-9fd" secondAttribute="leading" id="96O-8N-DnS"/>
-                            <constraint firstAttribute="bottom" secondItem="yKf-Oe-Ah3" secondAttribute="bottom" id="Fk9-se-lUR"/>
+                            <constraint firstAttribute="bottom" secondItem="yKf-Oe-Ah3" secondAttribute="bottom" constant="49" id="Fk9-se-lUR"/>
                             <constraint firstAttribute="trailing" secondItem="yKf-Oe-Ah3" secondAttribute="trailing" id="Mc3-aT-tsW"/>
                             <constraint firstItem="yKf-Oe-Ah3" firstAttribute="top" secondItem="29Y-li-9fd" secondAttribute="top" id="dzG-0n-G4y"/>
                             <constraint firstItem="eVC-uZ-KfM" firstAttribute="top" secondItem="DgB-rn-80V" secondAttribute="bottom" constant="8" id="mZa-cW-fln"/>
@@ -74,7 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hGa-GU-2b2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1591.2" y="334.63268365817095"/>
+            <point key="canvasLocation" x="1048.8" y="322.93853073463271"/>
         </scene>
         <!--Калькулятор-->
         <scene sceneID="TCc-Wx-w0N">
@@ -93,7 +119,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qbK-0j-AVA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="948" y="993"/>
+            <point key="canvasLocation" x="386" y="975"/>
         </scene>
         <!--Заказать-->
         <scene sceneID="b4G-WR-CGK">
@@ -112,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HDO-mw-vwK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="949" y="-331"/>
+            <point key="canvasLocation" x="386" y="-331"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="FAB-TK-fkA">
@@ -137,7 +163,10 @@
     </scenes>
     <resources>
         <image name="In Transit-50" width="30" height="30"/>
+        <image name="New Product-100" width="100" height="100"/>
         <image name="Purchase Order-50" width="30" height="30"/>
+        <image name="Ruble-100" width="100" height="100"/>
         <image name="Ruble-50" width="30" height="30"/>
+        <image name="Shipped-100" width="100" height="100"/>
     </resources>
 </document>
